--- a/fire_size_prediction.ipynb
+++ b/fire_size_prediction.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/patrik-sh/Documents/ITMO_Classes/Multivariate/tasks/task3/venv/lib/python3.8/site-packages/pandas/core/frame.py:4906: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  return super().drop(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -25,7 +14,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -188,8 +177,8 @@
       "Requirement already satisfied: traitlets==5.1.0 in ./venv/lib/python3.8/site-packages (from -r BAMT/requirements.txt (line 46)) (5.1.0)\n",
       "Requirement already satisfied: typing-extensions==3.10.0.2 in ./venv/lib/python3.8/site-packages (from -r BAMT/requirements.txt (line 47)) (3.10.0.2)\n",
       "Requirement already satisfied: wcwidth==0.2.5 in ./venv/lib/python3.8/site-packages (from -r BAMT/requirements.txt (line 48)) (0.2.5)\n",
-      "Requirement already satisfied: setuptools>=18.5 in ./venv/lib/python3.8/site-packages (from ipython==7.28.0->-r BAMT/requirements.txt (line 11)) (44.0.0)\n",
       "Requirement already satisfied: pexpect>4.3; sys_platform != \"win32\" in ./venv/lib/python3.8/site-packages (from ipython==7.28.0->-r BAMT/requirements.txt (line 11)) (4.8.0)\n",
+      "Requirement already satisfied: setuptools>=18.5 in ./venv/lib/python3.8/site-packages (from ipython==7.28.0->-r BAMT/requirements.txt (line 11)) (44.0.0)\n",
       "Requirement already satisfied: ptyprocess>=0.5 in ./venv/lib/python3.8/site-packages (from pexpect>4.3; sys_platform != \"win32\"->ipython==7.28.0->-r BAMT/requirements.txt (line 11)) (0.7.0)\n"
      ]
     },
@@ -223,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +443,7 @@
        "9    0.151147  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +482,7 @@
        " 'remoteness': 'cont'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -526,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,98 +531,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/patrik-sh/Documents/ITMO_Classes/Multivariate/tasks/task3/venv/lib/python3.8/site-packages/pgmpy/models/BayesianModel.py:8: FutureWarning: BayesianModel has been renamed to BayesianNetwork. Please use BayesianNewtork class, BayesianModel will be removed in future.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best metric is 13.229983056873703\n",
-      "Generation num: 0\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 1.9 min\n",
-      "Best metric is 13.170385326436989\n",
-      "Generation num: 1\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 3.5 min\n",
-      "Best metric is 12.554400251694354\n",
-      "Generation num: 2\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 4.5 min\n",
-      "Best metric is 12.216226136850704\n",
-      "Generation num: 3\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 5.2 min\n",
-      "Best metric is 12.037526136850705\n",
-      "Generation num: 4\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 6.0 min\n",
-      "Best metric is 12.037526136850705\n",
-      "Generation num: 5\n",
-      "max_depth: 6, no improvements: 1\n",
-      "spent time: 6.8 min\n",
-      "Best metric is 11.941126136850706\n",
-      "Generation num: 6\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 7.6 min\n",
-      "Best metric is 10.707684635561694\n",
-      "Generation num: 7\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 8.3 min\n",
-      "Best metric is 10.706784635561696\n",
-      "Generation num: 8\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 9.1 min\n",
-      "Best metric is 10.520784635561693\n",
-      "Generation num: 9\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 9.8 min\n",
-      "Best metric is 10.468184635561695\n",
-      "Generation num: 10\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 10.6 min\n",
-      "Best metric is 10.384384635561695\n",
-      "Generation num: 11\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 11.3 min\n",
-      "Best metric is 10.383484635561693\n",
-      "Generation num: 12\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 12.2 min\n",
-      "Best metric is 10.367184635561696\n",
-      "Generation num: 13\n",
-      "max_depth: 6, no improvements: 0\n",
-      "spent time: 13.0 min\n",
-      "Best metric is 10.351884635561696\n",
-      "Result:\n",
-      "Best metric is 10.351884635561696\n",
-      "Composition time: 13.026 min\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '/home/patrik-sh/Documents/ITMO_Classes/Multivariate/tasks/task3/models/structure_bn/params_evok2.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_409951/4018336680.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mbn_evo_k2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_structure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'struct_evok2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msave_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbn_evo_params\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'params_evok2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mbn_evo_params\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_structure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'params_evok2'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mbayes_evok2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mHyBayesianNetwork\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbn_evo_k2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbn_evo_params\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/ITMO_Classes/Multivariate/tasks/task3/BAMT/bayesian/save_bn.py\u001b[0m in \u001b[0;36mread_structure\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m     47\u001b[0m     \u001b[0mskel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGraphSkeleton\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m     \u001b[0mskel_loc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mproject_root\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mr'models/structure_bn'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf\"{name}.txt\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m     \u001b[0mskel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskel_loc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m     \u001b[0mskel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoporder\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mskel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/ITMO_Classes/Multivariate/tasks/task3/BAMT/external/libpgm/graphskeleton.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m         '''\n\u001b[0;32m---> 66\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdictload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mV\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malldata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"V\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mE\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malldata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"E\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/Documents/ITMO_Classes/Multivariate/tasks/task3/BAMT/external/libpgm/dictionary.py\u001b[0m in \u001b[0;36mdictload\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         '''\n\u001b[0;32m---> 59\u001b[0;31m         \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     60\u001b[0m         \u001b[0mftext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     61\u001b[0m         \u001b[0;32massert\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mftext\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mftext\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Input file is empty or could not be read.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/patrik-sh/Documents/ITMO_Classes/Multivariate/tasks/task3/models/structure_bn/params_evok2.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "bn_evo_k2 = structure_learning(discrete_data, 'evo', nodes_type)\n",
     "save_structure(bn_evo_k2, 'struct_evok2')\n",
@@ -647,35 +547,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'structure_learning' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_411258/4213487874.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbn_hc_mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstructure_learning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiscrete_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'HC'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnodes_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'MI'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msave_structure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbn_hc_mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'struct_hcmi'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mbn_hcmi_params\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mparameter_learning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdiscrete_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnodes_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbn_hc_mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'simple'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0msave_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbn_hcmi_params\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'params_hcmi'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mbn_hc_mi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mread_structure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'struct_hcmi'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'structure_learning' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bn_hc_mi = structure_learning(discrete_data, 'HC', nodes_type, 'MI')\n",
-    "save_structure(bn_hc_mi, 'struct_hcmi')\n",
-    "bn_hcmi_params = parameter_learning(discrete_data, nodes_type, bn_hc_mi, 'simple')\n",
-    "save_params(bn_hcmi_params, 'params_hcmi')\n",
+    "#bn_hc_mi = structure_learning(discrete_data, 'HC', nodes_type, 'MI')\n",
+    "#save_structure(bn_hc_mi, 'struct_hcmi')\n",
+    "#bn_hcmi_params = parameter_learning(discrete_data, nodes_type, bn_hc_mi, 'simple')\n",
+    "#save_params(bn_hcmi_params, 'params_hcmi')\n",
     "bn_hc_mi = read_structure('struct_hcmi')\n",
-    "bn_hcmi_params = read_params(bn_hcmi_params, 'params_hcmi')\n",
+    "bn_hcmi_params = read_params('params_hcmi')\n",
     "\n",
     "bayes_hcmi = HyBayesianNetwork(bn_hc_mi, bn_hcmi_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -10555,8 +10443,16 @@
     }
    ],
    "source": [
-    "\n",
-    "calculate_acc(bayes_hc, df, ['fire_size'], 'simple')"
+    "acc, rmse, real_data, predicted_data =  calculate_acc(bayes_hc, df, ['fire_size'], 'simple')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "acc, rmse, real_data, predicted_data =  calculate_acc(bayes_hcmi, df, ['fire_size'], 'simple')"
    ]
   }
  ],
